Working with stomach ache...

--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -40,7 +40,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Subgroup-specific structural variation across 1,000 medulloblastoma genomes](https://www.nature.com/articles/nature11327)"
+    "## [Intertumoral Heterogeneity within Medulloblastoma Subgroups](https://www.cell.com/cancer-cell/fulltext/S1535-6108(17)30201-5)\n",
+    "\n",
+    "[GSE85218](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE85218) (GSE85212, GSE85217)"
    ]
   },
   {
@@ -49,26 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE37382\"\n",
-    "\n",
-    "(gene_x_sample, _, continuous_x_sample, binary_x_sample,) = get_geo.get_gse(\n",
-    "    gse_id, directory_path, overwrite=overwrite\n",
-    ")\n",
-    "\n",
-    "gene_x_sample.to_csv(\"{}/{}_gene_x_sample.tsv\".format(directory_path, gse_id))\n",
-    "\n",
-    "continuous_x_sample.to_csv(\n",
-    "    \"{}/{}_continuous_x_sample.tsv\".format(directory_path, gse_id)\n",
-    ")\n",
-    "\n",
-    "binary_x_sample.to_csv(\"{}/{}_binary_x_sample.tsv\".format(directory_path, gse_id))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## [Intertumoral Heterogeneity within Medulloblastoma Subgroups](https://www.cell.com/cancer-cell/fulltext/S1535-6108(17)30201-5)"
+    "gse_id = \"GSE85218\""
    ]
   },
   {
@@ -77,19 +60,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE85218\"\n",
-    "\n",
     "continuous_x_sample, binary_x_sample = kraft.separate_type(\n",
-    "    pd.read_csv(\"mmc2.tsv\", sep=\"\\t\", index_col=0,).T\n",
+    "    pd.read_csv(\"mmc2.tsv\", sep=\"\\t\", index_col=0).T\n",
     ")\n",
     "\n",
     "continuous_x_sample = kraft.tidy(continuous_x_sample)\n",
     "\n",
-    "binary_x_sample = kraft.tidy(binary_x_sample)\n",
-    "\n",
     "continuous_x_sample.to_csv(\n",
     "    \"{}/{}_continuous_x_sample.tsv\".format(directory_path, gse_id)\n",
     ")\n",
+    "\n",
+    "binary_x_sample = kraft.tidy(binary_x_sample)\n",
     "\n",
     "binary_x_sample.to_csv(\"{}/{}_binary_x_sample.tsv\".format(directory_path, gse_id))"
    ]
@@ -134,7 +115,6 @@
     "    index_col=0,\n",
     ").iloc[:, 4:]\n",
     "\n",
-    "\n",
     "gene_x_sample.index = gene_x_sample.index.map(name_biology.ENS_GENE)\n",
     "\n",
     "gene_x_sample = kraft.tidy(kraft.group(gene_x_sample.loc[~gene_x_sample.index.isna()]))\n",
@@ -142,6 +122,124 @@
     "gene_x_sample.to_csv(\n",
     "    \"{}/{}_rna_gene_x_sample.tsv\".format(directory_path, gse_id), sep=\"\\t\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Subgroup-specific structural variation across 1,000 medulloblastoma genomes](https://www.nature.com/articles/nature11327)\n",
+    "\n",
+    "[GSE37385](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE37385) (GSE37382, GSE37384)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE37385\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE37382\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    gene_x_sample,\n",
+    "    information_x_sample,\n",
+    "    continuous_x_sample,\n",
+    "    binary_x_sample,\n",
+    ") = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)\n",
+    "\n",
+    "gene_x_sample.to_csv(\"{}/{}_gene_x_sample.tsv\".format(directory_path, gse_id))\n",
+    "\n",
+    "continuous_x_sample.to_csv(\n",
+    "    \"{}/{}_continuous_x_sample.tsv\".format(directory_path, gse_id)\n",
+    ")\n",
+    "\n",
+    "binary_x_sample.to_csv(\"{}/{}_binary_x_sample.tsv\".format(directory_path, gse_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE37384\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    gene_x_sample,\n",
+    "    information_x_sample,\n",
+    "    continuous_x_sample,\n",
+    "    binary_x_sample,\n",
+    ") = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Novel molecular subgroups for clinical classification and outcome prediction in childhood medulloblastoma: a cohort study](https://www.thelancet.com/journals/lanonc/article/PIIS1470-2045(17)30243-7/fulltext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE93646\"\n",
+    "\n",
+    "(\n",
+    "    gene_x_sample,\n",
+    "    information_x_sample,\n",
+    "    continuous_x_sample,\n",
+    "    binary_x_sample,\n",
+    ") = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Multiple recurrent genetic events converge on control of histone lysine methylation in medulloblastoma](https://www.nature.com/articles/ng.336)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE14437\"\n",
+    "\n",
+    "(\n",
+    "    gene_x_sample,\n",
+    "    information_x_sample,\n",
+    "    continuous_x_sample,\n",
+    "    binary_x_sample,\n",
+    ") = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
    ]
   }
  ],
