--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -60,19 +60,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "continuous_x_sample, binary_x_sample = kraft.separate_type(\n",
-    "    pd.read_csv(\"mmc2.tsv\", sep=\"\\t\", index_col=0).T\n",
-    ")\n",
+    "information_x_sample = pd.read_csv(\"mmc2.tsv\", sep=\"\\t\", index_col=0).T\n",
     "\n",
+    "information_x_sample.index.name = \"Information\"\n",
+    "\n",
+    "continuous_x_sample, binary_x_sample = kraft.separate_type(information_x_sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "continuous_x_sample = kraft.tidy(continuous_x_sample)\n",
     "\n",
-    "continuous_x_sample.to_csv(\n",
-    "    \"{}/{}_continuous_x_sample.tsv\".format(directory_path, gse_id)\n",
-    ")\n",
-    "\n",
+    "continuous_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "binary_x_sample = kraft.tidy(binary_x_sample)\n",
     "\n",
-    "binary_x_sample.to_csv(\"{}/{}_binary_x_sample.tsv\".format(directory_path, gse_id))"
+    "binary_x_sample"
    ]
   },
   {
@@ -83,20 +97,19 @@
    "source": [
     "gene_x_sample = pd.read_csv(\n",
     "    kraft.download(\n",
-    "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
+    "        \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
     "        directory_path,\n",
     "        overwrite=overwrite,\n",
     "    ),\n",
     "    sep=\"\\t\",\n",
     ")\n",
-    "\n",
     "gene_x_sample.index = gene_x_sample.index.map(name_biology.ILMNID_GENE)\n",
+    "\n",
+    "gene_x_sample.index.name = \"Gene\"\n",
     "\n",
     "gene_x_sample = kraft.tidy(kraft.group(gene_x_sample.loc[~gene_x_sample.index.isna()]))\n",
     "\n",
-    "gene_x_sample.to_csv(\n",
-    "    \"{}/{}_methylation_gene_x_sample.tsv\".format(directory_path, gse_id), sep=\"\\t\"\n",
-    ")"
+    "gene_x_sample"
    ]
   },
   {
@@ -107,7 +120,7 @@
    "source": [
     "gene_x_sample = pd.read_csv(\n",
     "    kraft.download(\n",
-    "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85217/suppl/GSE85217_M_exp_763_MB_SubtypeStudy_TaylorLab.txt.gz\",\n",
+    "        \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85217/suppl/GSE85217_M_exp_763_MB_SubtypeStudy_TaylorLab.txt.gz\",\n",
     "        directory_path,\n",
     "        overwrite=overwrite,\n",
     "    ),\n",
@@ -117,11 +130,11 @@
     "\n",
     "gene_x_sample.index = gene_x_sample.index.map(name_biology.ENS_GENE)\n",
     "\n",
+    "gene_x_sample.index.name = \"Gene\"\n",
+    "\n",
     "gene_x_sample = kraft.tidy(kraft.group(gene_x_sample.loc[~gene_x_sample.index.isna()]))\n",
     "\n",
-    "gene_x_sample.to_csv(\n",
-    "    \"{}/{}_rna_gene_x_sample.tsv\".format(directory_path, gse_id), sep=\"\\t\"\n",
-    ")"
+    "gene_x_sample"
    ]
   },
   {
@@ -148,7 +161,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE37382\""
+    "gse_id = \"GSE37382\"\n",
+    "\n",
+    "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
+    "    gse_id, directory_path, overwrite=overwrite\n",
+    ")"
    ]
   },
   {
@@ -157,13 +174,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    gene_x_sample,\n",
-    "    information_x_sample,\n",
-    "    continuous_x_sample,\n",
-    "    binary_x_sample,\n",
-    ") = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)\n",
-    "\n",
+    "_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "continuous_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gene_x_sample.to_csv(\"{}/{}_gene_x_sample.tsv\".format(directory_path, gse_id))\n",
     "\n",
     "continuous_x_sample.to_csv(\n",
@@ -174,33 +211,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gse_id = \"GSE37384\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    gene_x_sample,\n",
-    "    information_x_sample,\n",
-    "    continuous_x_sample,\n",
-    "    binary_x_sample,\n",
-    ") = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Novel molecular subgroups for clinical classification and outcome prediction in childhood medulloblastoma: a cohort study](https://www.thelancet.com/journals/lanonc/article/PIIS1470-2045(17)30243-7/fulltext)"
+    "## [Novel molecular subgroups for clinical classification and outcome prediction in childhood medulloblastoma: a cohort study](https://www.thelancet.com/journals/lanonc/article/PIIS1470-2045(17)30243-7/fulltext)\n",
+    "\n",
+    "[GSE93646](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE93646)"
    ]
   },
   {
@@ -211,19 +227,64 @@
    "source": [
     "gse_id = \"GSE93646\"\n",
     "\n",
-    "(\n",
-    "    gene_x_sample,\n",
-    "    information_x_sample,\n",
-    "    continuous_x_sample,\n",
-    "    binary_x_sample,\n",
-    ") = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+    "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
+    "    gse_id, directory_path, overwrite=overwrite\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "continuous_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_x_sample = pd.read_csv(\n",
+    "    kraft.download(\n",
+    "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE93nnn/GSE93646/suppl/GSE93646_non_normalized.txt.gz\",\n",
+    "        directory_path,\n",
+    "        overwrite=overwrite,\n",
+    "    ),\n",
+    "    sep=\"\\t\",\n",
+    "    index_col=1,\n",
+    ")\n",
+    "\n",
+    "gene_x_sample"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Multiple recurrent genetic events converge on control of histone lysine methylation in medulloblastoma](https://www.nature.com/articles/ng.336)"
+    "## [Multiple recurrent genetic events converge on control of histone lysine methylation in medulloblastoma](https://www.nature.com/articles/ng.336)\n",
+    "\n",
+    "[GSE14437](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE14437)"
    ]
   },
   {
@@ -234,12 +295,9 @@
    "source": [
     "gse_id = \"GSE14437\"\n",
     "\n",
-    "(\n",
-    "    gene_x_sample,\n",
-    "    information_x_sample,\n",
-    "    continuous_x_sample,\n",
-    "    binary_x_sample,\n",
-    ") = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+    "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
+    "    gse_id, directory_path, overwrite=overwrite\n",
+    ")"
    ]
   }
  ],
