Refactoring geo_geo related functions

--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE85218\""
+    "gse_id = \"GSE85212\""
    ]
   },
   {
@@ -60,11 +60,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "information_x_sample = pd.read_csv(\"mmc2.tsv\", sep=\"\\t\", index_col=0).T\n",
-    "\n",
-    "information_x_sample.index.name = \"Information\"\n",
-    "\n",
-    "continuous_x_sample, binary_x_sample = kraft.separate_type(information_x_sample)"
+    "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
+    "    gse_id, directory_path, overwrite=overwrite\n",
+    ")"
    ]
   },
   {
@@ -73,8 +71,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "continuous_x_sample = kraft.tidy(continuous_x_sample)\n",
-    "\n",
+    "_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "continuous_x_sample"
    ]
   },
@@ -84,8 +89,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binary_x_sample = kraft.tidy(binary_x_sample)\n",
-    "\n",
     "binary_x_sample"
    ]
   },
@@ -95,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_x_sample = pd.read_csv(\n",
+    "_x_sample = pd.read_csv(\n",
     "    kraft.download(\n",
     "        \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
     "        directory_path,\n",
@@ -103,13 +106,16 @@
     "    ),\n",
     "    sep=\"\\t\",\n",
     ")\n",
-    "gene_x_sample.index = gene_x_sample.index.map(name_biology.ILMNID_GENE)\n",
     "\n",
-    "gene_x_sample.index.name = \"Gene\"\n",
+    "_x_sample.index = _x_sample.index.map(name_biology.ILMNID_GENE)\n",
     "\n",
-    "gene_x_sample = kraft.tidy(kraft.group(gene_x_sample.loc[~gene_x_sample.index.isna()]))\n",
+    "_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "gene_x_sample"
+    "# TODO: Rename samples\n",
+    "\n",
+    "_x_sample = kraft.tidy(kraft.group(_x_sample.loc[~_x_sample.index.isna()]))\n",
+    "\n",
+    "_x_sample"
    ]
   },
   {
@@ -118,7 +124,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_x_sample = pd.read_csv(\n",
+    "gse_id = \"GSE85217\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
+    "    gse_id, directory_path, overwrite=overwrite\n",
+    ")\n",
+    "\n",
+    "# TODO: Rename samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "continuous_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_sample = pd.read_csv(\n",
     "    kraft.download(\n",
     "        \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85217/suppl/GSE85217_M_exp_763_MB_SubtypeStudy_TaylorLab.txt.gz\",\n",
     "        directory_path,\n",
@@ -128,13 +183,13 @@
     "    index_col=0,\n",
     ").iloc[:, 4:]\n",
     "\n",
-    "gene_x_sample.index = gene_x_sample.index.map(name_biology.ENS_GENE)\n",
+    "_x_sample.index = _x_sample.index.map(name_biology.ENS_GENE)\n",
     "\n",
-    "gene_x_sample.index.name = \"Gene\"\n",
+    "_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "gene_x_sample = kraft.tidy(kraft.group(gene_x_sample.loc[~gene_x_sample.index.isna()]))\n",
+    "_x_sample = kraft.tidy(kraft.group(_x_sample.loc[~_x_sample.index.isna()]))\n",
     "\n",
-    "gene_x_sample"
+    "_x_sample"
    ]
   },
   {
@@ -152,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE37385\""
+    "gse_id = \"GSE37382\""
    ]
   },
   {
@@ -161,8 +216,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE37382\"\n",
-    "\n",
     "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
     "    gse_id, directory_path, overwrite=overwrite\n",
     ")"
@@ -193,21 +246,6 @@
    "outputs": [],
    "source": [
     "binary_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gene_x_sample.to_csv(\"{}/{}_gene_x_sample.tsv\".format(directory_path, gse_id))\n",
-    "\n",
-    "continuous_x_sample.to_csv(\n",
-    "    \"{}/{}_continuous_x_sample.tsv\".format(directory_path, gse_id)\n",
-    ")\n",
-    "\n",
-    "binary_x_sample.to_csv(\"{}/{}_binary_x_sample.tsv\".format(directory_path, gse_id))"
    ]
   },
   {
@@ -225,10 +263,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE93646\"\n",
-    "\n",
+    "gse_id = \"GSE93646\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
     "    gse_id, directory_path, overwrite=overwrite\n",
+    ")\n",
+    "\n",
+    "# TODO: Rename samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "continuous_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_sample = pd.read_csv(\n",
+    "    kraft.download(\n",
+    "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE93nnn/GSE93646/suppl/GSE93646_processed_data.txt.gz\",\n",
+    "        directory_path,\n",
+    "        overwrite=overwrite,\n",
+    "    ),\n",
+    "    sep=\"\\t\",\n",
+    "    index_col=1,\n",
+    ").iloc[:, 1::2]\n",
+    "\n",
+    "_x_sample.index = _x_sample.index.map(name_biology.ILMNID_GENE)\n",
+    "\n",
+    "_x_sample.index.name = \"Gene\"\n",
+    "\n",
+    "_x_sample = kraft.tidy(kraft.group(_x_sample.loc[~_x_sample.index.isna()]))\n",
+    "\n",
+    "_x_sample"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Multiple recurrent genetic events converge on control of histone lysine methylation in medulloblastoma](https://www.nature.com/articles/ng.336)\n",
+    "\n",
+    "[GSE14437](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE14437)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE14437\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
+    "    gse_id, directory_path, overwrite=overwrite\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_sample, characteristic_x_sample = get_geo.read_soft_gz.read_soft_gz(\n",
+    "    \"/home/kwat/Downloads/GSE14437_family.soft.gz\",\n",
     ")"
    ]
   },
@@ -257,47 +398,6 @@
    "outputs": [],
    "source": [
     "binary_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gene_x_sample = pd.read_csv(\n",
-    "    kraft.download(\n",
-    "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE93nnn/GSE93646/suppl/GSE93646_non_normalized.txt.gz\",\n",
-    "        directory_path,\n",
-    "        overwrite=overwrite,\n",
-    "    ),\n",
-    "    sep=\"\\t\",\n",
-    "    index_col=1,\n",
-    ")\n",
-    "\n",
-    "gene_x_sample"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## [Multiple recurrent genetic events converge on control of histone lysine methylation in medulloblastoma](https://www.nature.com/articles/ng.336)\n",
-    "\n",
-    "[GSE14437](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE14437)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gse_id = \"GSE14437\"\n",
-    "\n",
-    "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
-    "    gse_id, directory_path, overwrite=overwrite\n",
-    ")"
    ]
   }
  ],
