Improving parsing logics

--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -357,9 +357,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
-    "    gse_id, directory_path, overwrite=overwrite\n",
-    ")"
+    "# _x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
+    "#     gse_id, directory_path, overwrite=overwrite\n",
+    "# )"
    ]
   },
   {
