--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gse_id = \"GSE85218\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(21641, 762)\n",
+      "                    GSM2261539  GSM2261540\n",
+      "GPL22286                                  \n",
+      "ENSG00000000003_at    8.406470    8.006128\n",
+      "ENSG00000000005_at    3.911187    3.686010\n"
+     ]
+    }
+   ],
+   "source": [
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
-    "    gse_id, directory_path, overwrite=overwrite\n",
-    ")"
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
    ]
   },
   {
@@ -71,56 +99,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_sample"
+    "# _x_sample = pd.read_csv(\n",
+    "#     kraft.download(\n",
+    "#         \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
+    "#         directory_path,\n",
+    "#         overwrite=overwrite,\n",
+    "#     ),\n",
+    "#     sep=\"\\t\",\n",
+    "# )\n",
+    "\n",
+    "# _x_sample.index = _x_sample.index.map(name_biology.ILMNID_GENE)\n",
+    "\n",
+    "# _x_sample.index.name = \"Gene\"\n",
+    "\n",
+    "# _x_sample = kraft.tidy(kraft.group(_x_sample.loc[~_x_sample.index.isna()]))\n",
+    "\n",
+    "# _x_sample"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "continuous_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binary_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_x_sample = pd.read_csv(\n",
-    "    kraft.download(\n",
-    "        \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212_Methylation_763samples_SubtypeStudy_TaylorLab_beta_values.txt.gz\",\n",
-    "        directory_path,\n",
-    "        overwrite=overwrite,\n",
-    "    ),\n",
-    "    sep=\"\\t\",\n",
-    ")\n",
-    "\n",
-    "_x_sample.index = _x_sample.index.map(name_biology.ILMNID_GENE)\n",
-    "\n",
-    "_x_sample.index.name = \"Gene\"\n",
-    "\n",
-    "# TODO: Rename samples\n",
-    "\n",
-    "_x_sample = kraft.tidy(kraft.group(_x_sample.loc[~_x_sample.index.isna()]))\n",
-    "\n",
-    "_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,15 +128,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(21641, 763)\n",
+      "                    GSM2261538  GSM2261539\n",
+      "GPL22286                                  \n",
+      "ENSG00000000003_at    8.810256    8.406470\n",
+      "ENSG00000000005_at    4.022827    3.911187\n"
+     ]
+    }
+   ],
    "source": [
-    "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
-    "    gse_id, directory_path, overwrite=overwrite\n",
-    ")\n",
-    "\n",
-    "# TODO: Rename samples"
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
    ]
   },
   {
@@ -146,50 +153,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "continuous_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binary_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_x_sample = pd.read_csv(\n",
-    "    kraft.download(\n",
-    "        \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85217/suppl/GSE85217_M_exp_763_MB_SubtypeStudy_TaylorLab.txt.gz\",\n",
-    "        directory_path,\n",
-    "        overwrite=overwrite,\n",
-    "    ),\n",
-    "    sep=\"\\t\",\n",
-    "    index_col=0,\n",
-    ").iloc[:, 4:]\n",
+    "# _x_sample = pd.read_csv(\n",
+    "#     kraft.download(\n",
+    "#         \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85217/suppl/GSE85217_M_exp_763_MB_SubtypeStudy_TaylorLab.txt.gz\",\n",
+    "#         directory_path,\n",
+    "#         overwrite=overwrite,\n",
+    "#     ),\n",
+    "#     sep=\"\\t\",\n",
+    "#     index_col=0,\n",
+    "# ).iloc[:, 4:]\n",
     "\n",
-    "_x_sample.index = _x_sample.index.map(name_biology.ENS_GENE)\n",
+    "# _x_sample.index = _x_sample.index.map(name_biology.ENS_GENE)\n",
     "\n",
-    "_x_sample.index.name = \"Gene\"\n",
+    "# _x_sample.index.name = \"Gene\"\n",
     "\n",
-    "_x_sample = kraft.tidy(kraft.group(_x_sample.loc[~_x_sample.index.isna()]))\n",
+    "# _x_sample = kraft.tidy(kraft.group(_x_sample.loc[~_x_sample.index.isna()]))\n",
     "\n",
-    "_x_sample"
+    "# _x_sample"
    ]
   },
   {
@@ -203,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,40 +192,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(33297, 285)\n",
+      "          GSM917011  GSM917012\n",
+      "GPL11532                      \n",
+      "7896736        6.85       6.56\n",
+      "7896738        3.68       3.64\n"
+     ]
+    }
+   ],
    "source": [
-    "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
-    "    gse_id, directory_path, overwrite=overwrite\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "continuous_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binary_x_sample"
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
    ]
   },
   {
@@ -259,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,69 +231,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
-    "    gse_id, directory_path, overwrite=overwrite\n",
-    ")\n",
-    "\n",
-    "# TODO: Rename samples"
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "continuous_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binary_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_x_sample = pd.read_csv(\n",
-    "    kraft.download(\n",
-    "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE93nnn/GSE93646/suppl/GSE93646_processed_data.txt.gz\",\n",
-    "        directory_path,\n",
-    "        overwrite=overwrite,\n",
-    "    ),\n",
-    "    sep=\"\\t\",\n",
-    "    index_col=1,\n",
-    ").iloc[:, 1::2]\n",
+    "# _x_sample = pd.read_csv(\n",
+    "#     kraft.download(\n",
+    "#         \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE93nnn/GSE93646/suppl/GSE93646_processed_data.txt.gz\",\n",
+    "#         directory_path,\n",
+    "#         overwrite=overwrite,\n",
+    "#     ),\n",
+    "#     sep=\"\\t\",\n",
+    "#     index_col=1,\n",
+    "# ).iloc[:, 1::2]\n",
     "\n",
-    "_x_sample.index = _x_sample.index.map(name_biology.ILMNID_GENE)\n",
+    "# _x_sample.index = _x_sample.index.map(name_biology.ILMNID_GENE)\n",
     "\n",
-    "_x_sample.index.name = \"Gene\"\n",
+    "# _x_sample.index.name = \"Gene\"\n",
     "\n",
-    "_x_sample = kraft.tidy(kraft.group(_x_sample.loc[~_x_sample.index.isna()]))\n",
+    "# _x_sample = kraft.tidy(kraft.group(_x_sample.loc[~_x_sample.index.isna()]))\n",
     "\n",
-    "_x_sample"
+    "# _x_sample"
    ]
   },
   {
@@ -344,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,47 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# _x_sample, continuous_x_sample, binary_x_sample = get_geo.get_gse(\n",
-    "#     gse_id, directory_path, overwrite=overwrite\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_x_sample, characteristic_x_sample = get_geo.read_soft_gz.read_soft_gz(\n",
-    "    \"/home/kwat/Downloads/GSE14437_family.soft.gz\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "continuous_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binary_x_sample"
+    "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
    ]
   }
  ],
