--- a/notebook/medulloblastoma.ipynb
+++ b/notebook/medulloblastoma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,16 +56,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32, 1144)\n",
+      "                                             GSM2260745  \\\n",
+      "Information                                               \n",
+      "Sample_title          MB_SubtypeStudy_55001_methylation   \n",
+      "Sample_geo_accession                         GSM2260745   \n",
+      "\n",
+      "                                             GSM2260747  \n",
+      "Information                                              \n",
+      "Sample_title          MB_SubtypeStudy_55003_methylation  \n",
+      "Sample_geo_accession                         GSM2260747  \n",
+      "(21641, 762)\n",
+      "                    GSM2261539  GSM2261540\n",
+      "GPL22286                                  \n",
+      "ENSG00000000003_at    8.406470    8.006128\n",
+      "ENSG00000000005_at    3.911187    3.686010\n"
+     ]
+    }
+   ],
    "source": [
     "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,16 +96,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32, 382)\n",
+      "                                             GSM2260745  \\\n",
+      "Information                                               \n",
+      "Sample_title          MB_SubtypeStudy_55001_methylation   \n",
+      "Sample_geo_accession                         GSM2260745   \n",
+      "\n",
+      "                                             GSM2260747  \n",
+      "Information                                              \n",
+      "Sample_title          MB_SubtypeStudy_55003_methylation  \n",
+      "Sample_geo_accession                         GSM2260747  \n"
+     ]
+    }
+   ],
    "source": [
     "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,16 +155,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32, 763)\n",
+      "                                 GSM2261538             GSM2261539\n",
+      "Information                                                       \n",
+      "Sample_title          MB_SubtypeStudy_55001  MB_SubtypeStudy_55002\n",
+      "Sample_geo_accession             GSM2261538             GSM2261539\n",
+      "(21641, 763)\n",
+      "                    GSM2261538  GSM2261539\n",
+      "GPL22286                                  \n",
+      "ENSG00000000003_at    8.810256    8.406470\n",
+      "ENSG00000000005_at    4.022827    3.911187\n"
+     ]
+    }
+   ],
    "source": [
     "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,16 +233,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grouping index with median...\n",
+      "(22148, 285)\n",
+      "(20254, 285)\n",
+      "(33, 285)\n",
+      "                                                GSM917011  \\\n",
+      "Information                                                 \n",
+      "Sample_title          Primary medulloblastoma sample_MB-7   \n",
+      "Sample_geo_accession                            GSM917011   \n",
+      "\n",
+      "                                                 GSM917012  \n",
+      "Information                                                 \n",
+      "Sample_title          Primary medulloblastoma sample_MB-14  \n",
+      "Sample_geo_accession                             GSM917012  \n",
+      "(20254, 285)\n",
+      "          GSM917011  GSM917012\n",
+      "GPL11532                      \n",
+      "A1BG           6.38       6.12\n",
+      "A1CF           4.79       4.97\n"
+     ]
+    }
+   ],
    "source": [
     "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,16 +294,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(33, 214)\n",
+      "                                                   GSM2459424  \\\n",
+      "Information                                                     \n",
+      "Sample_title          genomic DNA from medulloblastoma_NMB109   \n",
+      "Sample_geo_accession                               GSM2459424   \n",
+      "\n",
+      "                                                   GSM2459426  \n",
+      "Information                                                    \n",
+      "Sample_title          genomic DNA from medulloblastoma_NMB111  \n",
+      "Sample_geo_accession                               GSM2459426  \n"
+     ]
+    }
+   ],
    "source": [
     "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,9 +363,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32, 424)\n",
+      "                      GSM360374  GSM360375\n",
+      "Information                               \n",
+      "Sample_title          D283_Hind  D341_Hind\n",
+      "Sample_geo_accession  GSM360374  GSM360375\n",
+      "(57244, 89)\n",
+      "               GSM360374  GSM360375\n",
+      "GPL2004                            \n",
+      "SNP_A-1658633   9767.437   9338.078\n",
+      "SNP_A-1691633   3746.943   2976.335\n",
+      "(59015, 89)\n",
+      "               GSM360463  GSM360464\n",
+      "GPL2005                            \n",
+      "SNP_A-1643131   2148.237   2404.798\n",
+      "SNP_A-1708186  11947.279   9662.887\n",
+      "(262264, 123)\n",
+      "               GSM360552  GSM360553\n",
+      "GPL3718                            \n",
+      "SNP_A-1780619    258.213    804.452\n",
+      "SNP_A-1780618    887.228    726.159\n",
+      "(238304, 123)\n",
+      "               GSM360675  GSM360676\n",
+      "GPL3720                            \n",
+      "SNP_A-1780358    896.486    871.209\n",
+      "SNP_A-1780551    690.959    681.482\n"
+     ]
+    }
+   ],
    "source": [
     "_x_samples = get_geo.get_gse(gse_id, directory_path, overwrite=overwrite)"
    ]
